@@ -132,6 +132,10 @@ register void *__thread_register __asm__ ("r13");
 # define TLS_INIT_TP(tcbp) \
     (__thread_register = (void *) (tcbp) + TLS_TCB_OFFSET, NULL)
 
+/* Value passed to 'clone' for initialization of the thread register.  */
+# define TLS_DEFINE_INIT_TP(tp, pd) \
+  void *tp = (void *) (pd) + TLS_TCB_OFFSET + TLS_PRE_TCB_SIZE
+
 /* Return the address of the dtv for the current thread.  */
 # define THREAD_DTV() \
     (((tcbhead_t *) (__thread_register - TLS_TCB_OFFSET))[-1].dtv)
